# codex-test

./: README.md
axum-sqlite-backend/: Cargo.toml
axum-sqlite-backend/src/: main.rs
metal-fans-website/: README.md  astro.config.mjs  package.json
metal-fans-website/src/layouts/: BaseLayout.astro
metal-fans-website/src/pages/: index.astro
metal-fans-website/src/styles/: global.css
